# Beacon

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  test_beacon.py
backend/api/: Dockerfile  Makefile  clickhouse.go  cloudwatch.go  go.mod  go.sum  handlers.go  main.go  trace.go
backend/consumer/: Makefile  clickhouse.go  go.mod  go.sum  main.go  s3.go  trace.go
backend/consumer/cmd/local/: main.go
backend/consumer/internal/consumer/: clickhouse.go  s3.go  trace.go
backend/drift/: Dockerfile  README.md  alert.go  drift.go  go.mod  go.sum  main.go  pagerduty.go  slack.go
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CostChart.tsx  LatencyChart.tsx  StatsBar.tsx  TraceDetail.tsx  TracesTable.tsx
infra/clickhouse/: migrate.sh
infra/clickhouse/migrations/: 001_create_llm_traces.sql
infra/terraform/: clickhouse.tf  ecs.tf  kinesis.tf  main.tf  outputs.tf  s3.tf  terraform.tfstate  variables.tf  vpc.tf
scripts/: deploy.sh  push-images.sh  run-consumer.sh
sdk/: README.md  pyproject.toml
sdk/beacon_sdk/: __init__.py  emitter.py  hallucination.py  pricing.py  trace.py
sdk/beacon_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/tests/: conftest.py  test_emitter.py  test_hallucination.py  test_trace.py
